feat: update book creation to support new fields (#123)
* feat: add new fields to BookCreation and BookCreationRequest

* feat: update CreateBookUseCaseImpl to support new fields